chore: fix graph node table overflow anomaly (#443)

--- a/src/pages/Fiber/GraphNodeList/index.module.scss
+++ b/src/pages/Fiber/GraphNodeList/index.module.scss
@@ -18,6 +18,13 @@
 
     font-size: 1rem;
 
+    td,
+    th {
+      word-break: break-all;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
+
     tbody {
       tr:not([data-role='pagination']) {
         position: relative;
@@ -126,7 +133,7 @@
 
       & > span:first-child {
         display: block;
-        max-width: 20ch;
+        max-width: 16ch;
         overflow: hidden;
         text-overflow: ellipsis;
       }
